<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

       
        <Preference
            android:key="@string/help"
            android:title="@string/help" 
             android:layout="@layout/custom_preference_layout_normal"/>
        <Preference
            android:key="@string/changeime"
            android:title="@string/click_to_change"
             android:layout="@layout/custom_preference_layout"
            />
	 <CheckBoxPreference
            android:key="@string/floatViewS"
            android:title="@string/toogle_to_open" 
            android:layout="@layout/custom_preference_layout"/>
        <Preference
            android:key="@string/device_state"
            android:title="@string/show_device_state"
                android:layout="@layout/custom_preference_layout_normal"
            />
         <PreferenceScreen
            android:key="@string/about"
            android:title="@string/about" 
                android:layout="@layout/custom_preference_layout_normal">
            <Preference
                android:key="@string/version"
                android:summary="@string/version_num"
                android:title="@string/version" />
            
        </PreferenceScreen>
        <Preference
            android:key="@string/quit"
            android:title="@string/quit"
                android:layout="@layout/custom_preference_layout_normal"
             />

</PreferenceScreen>